src/less/blocks/card.less
/*
 This file is a part of libertysoil.org website
 Copyright (C) 2015  Loki Education (Social Enterprise)

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU Affero General Public License for more details.

 You should have received a copy of the GNU Affero General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
.card {
  background: #fff;
  border-radius: 4px;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);

  & + & {
    margin-top: @doubleSpace;
  }

  &__comments {
    padding: 20px @doubleSpace;
  }

  &-full {
    margin-bottom: 35px;
  }

  &__link {
    position: absolute;
    bottom: 20px;
    right: 30px;
    border: none;
    color: #aeaeae;

    &:hover {
      color: #000;
    }
  }

  &__toolbars {
    &:extend(.layout);
  }
}

.card__header {
  padding: @space;
  font-weight: bold;
}

.card__content {
  padding: @doubleSpace @doubleSpace 0 @doubleSpace;
  line-height: 1.4;

  p + p {
    margin-top: 1em;
  }
}

.card__owner {
  padding: 20px @doubleSpace;
}

.card__read_link {
  margin-top: @space;
}

.card__footer {
  padding: 20px @doubleSpace;
  background: #f9f8f8;
  position: relative;

  .tags {
    margin-bottom: 15px;
  }
}

.card__toolbar {
  &:extend(.layout);
  &:extend(.layout__grid_item-wide);

  &:first-child {
    margin-top: 0;
  }

  &-right {
    flex: none!important;
  }

  &_item {
    color: #aeaeae;

    &:extend(.layout__grid_item all);
    &:extend(.layout);
    &:extend(.layout-align_vertical);

    &:hover {
      .icon {
        color: #000;
      }
    }
  }

  &_item_value {
    font-size: 13px;
    margin-left: 3px;
  }
}

